# junkyard

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: check_style.yml  run_clippy.yml  run_tests.yml
script/: clippy
src/: error.rs  lib.rs  linux.rs  macos.rs  platform.rs  util.rs
src/platform/: linux.rs  macos.rs  windows.rs
tests/: discard.rs
